fixing css for pay button alignment

--- a/ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-base/css/content-buttons.css
+++ b/ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-base/css/content-buttons.css
@@ -53,7 +53,7 @@ commented by Naresh */
 	}
 
     .contentBand .video .sprite.icon-large-play-orange {
-      left: 43%;
-      top: 40%;
+      left: 44%;
+      top: 36%;
     }
 }
